# flappy_moomoo

./: Cargo.toml
src/: main.rs
